fix overlap issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,5 +88,17 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 0; /* Ensure it stays above other content */
+  z-index: 0;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade {
+  animation: fadeIn 1s ease-in-out;
 }
